--- a/src/templates/application/use-case/Boundaries/UseCaseName/UseCaseNameOutput.tmpl
+++ b/src/templates/application/use-case/Boundaries/UseCaseName/UseCaseNameOutput.tmpl
@@ -1,6 +1,6 @@
 namespace ${namespace}
 {
-    public sealed class ${inputname}
+    public sealed class ${inputname}Output
     {
         ${cursor}
     }
