--- a/src/templates/domain/aggregate-root/entity.tmpl
+++ b/src/templates/domain/aggregate-root/entity.tmpl
@@ -1,6 +1,6 @@
 namespace ${namespace}
 {
-    public abstract class ${classname} : I${interfacename}
+    public abstract class ${inputname} : I${inputname}
     {
         ${cursor}
     }
