--- a/src/templates/domain/value-object.tmpl
+++ b/src/templates/domain/value-object.tmpl
@@ -1,6 +1,6 @@
 namespace ${namespace}
 {
-    public readonly struct ${structname}  : IEquatable<${structname}>
+    public readonly struct ${inputname}  : IEquatable<${inputname}>
     {
         ${cursor}
     }
