--- a/src/templates/application/unit-of-work.tmpl
+++ b/src/templates/application/unit-of-work.tmpl
@@ -2,7 +2,7 @@ namespace ${namespace}
 {
     using System.Threading.Tasks;
 
-    public interface I${interfacename}UnitOfWork
+    public interface I${inputname}UnitOfWork
     {
         Task<int> Save();
     }
