--- a/src/templates/domain/factory.tmpl
+++ b/src/templates/domain/factory.tmpl
@@ -1,6 +1,6 @@
 namespace ${namespace}
 {
-    public interface I${interfacename}
+    public interface I${inputname}
     {
         ${cursor}
     }
